// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input: component-name-description/component.vue, Output: component-name-description/component.vue.d.ts 1`] = `
"/**
 * My awesome component description
 */
declare const _default: typeof __VLS_export;
export default _default;
declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {
        /**
         * The title prop
         */
        title: {
            type: StringConstructor;
            required: true;
        };
    };
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
"
`;

exports[`Input: component-name-description/component-no-name.vue, Output: component-name-description/component-no-name.vue.d.ts 1`] = `
"/**
 * Component without explicit name
 */
type __VLS_Props = {
    /**
     * The value prop
     */
    value: string;
};
declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: __VLS_Props;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const _default: typeof __VLS_export;
export default _default;
"
`;

exports[`Input: component-name-description/component-ts.ts, Output: component-name-description/component-ts.d.ts 1`] = `
"/**
 * TypeScript component with description
 */
declare const _default: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {
        /**
         * The message prop
         */
        message: {
            type: StringConstructor;
            required: true;
        };
    };
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
export default _default;
"
`;

exports[`Input: empty-component/component.vue, Output: empty-component/component.vue.d.ts 1`] = `
"declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const _default: typeof __VLS_export;
export default _default;
"
`;

exports[`Input: empty-component/custom-extension-component.cext, Output: empty-component/custom-extension-component.cext.d.ts 1`] = `
"declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const _default: typeof __VLS_export;
export default _default;
"
`;

exports[`Input: generic/component.vue, Output: generic/component.vue.d.ts 1`] = `
"declare const __VLS_export: <T>(__VLS_props: NonNullable<Awaited<typeof __VLS_setup>>["props"], __VLS_ctx?: __VLS_PrettifyLocal<Pick<NonNullable<Awaited<typeof __VLS_setup>>, "attrs" | "emit" | "slots">>, __VLS_exposed?: NonNullable<Awaited<typeof __VLS_setup>>["expose"], __VLS_setup?: Promise<{
    props: import("vue").PublicProps & __VLS_PrettifyLocal<({
        foo: number;
    } & {
        title?: string;
    }) & {
        "onUpdate:title"?: (value: string) => any;
        onBar?: (data: number) => any;
    }> & (typeof globalThis extends {
        __VLS_PROPS_FALLBACK: infer P;
    } ? P : {});
    expose: (exposed: import("vue").ShallowUnwrapRef<{
        baz: number;
    }>) => void;
    attrs: any;
    slots: {
        default?: (props: {
            foo: number;
        }) => any;
    };
    emit: ((e: "bar", data: number) => void) & ((evt: "update:title", value: string) => void);
}>) => import("vue").VNode & {
    __ctx?: Awaited<typeof __VLS_setup>;
};
declare const _default: typeof __VLS_export;
export default _default;
type __VLS_PrettifyLocal<T> = (T extends any ? {
    [K in keyof T]: T[K];
} : {
    [K in keyof T as K]: T[K];
}) & {};
"
`;

exports[`Input: generic/custom-extension-component.cext, Output: generic/custom-extension-component.cext.d.ts 1`] = `
"declare const __VLS_export: <T>(__VLS_props: NonNullable<Awaited<typeof __VLS_setup>>["props"], __VLS_ctx?: __VLS_PrettifyLocal<Pick<NonNullable<Awaited<typeof __VLS_setup>>, "attrs" | "emit" | "slots">>, __VLS_exposed?: NonNullable<Awaited<typeof __VLS_setup>>["expose"], __VLS_setup?: Promise<{
    props: import("vue").PublicProps & __VLS_PrettifyLocal<({
        foo: number;
    } & {
        title?: string;
    }) & {
        "onUpdate:title"?: (value: string) => any;
        onBar?: (data: number) => any;
    }> & (typeof globalThis extends {
        __VLS_PROPS_FALLBACK: infer P;
    } ? P : {});
    expose: (exposed: import("vue").ShallowUnwrapRef<{
        baz: number;
    }>) => void;
    attrs: any;
    slots: {
        default?: (props: {
            foo: number;
        }) => any;
    };
    emit: ((e: "bar", data: number) => void) & ((evt: "update:title", value: string) => void);
}>) => import("vue").VNode & {
    __ctx?: Awaited<typeof __VLS_setup>;
};
declare const _default: typeof __VLS_export;
export default _default;
type __VLS_PrettifyLocal<T> = (T extends any ? {
    [K in keyof T]: T[K];
} : {
    [K in keyof T as K]: T[K];
}) & {};
"
`;

exports[`Input: generic/main.vue, Output: generic/main.vue.d.ts 1`] = `
"declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const _default: typeof __VLS_export;
export default _default;
"
`;

exports[`Input: non-component/component.ts, Output: non-component/component.d.ts 1`] = `
"declare const _default: {};
export default _default;
"
`;

exports[`Input: options-api/component.ts, Output: options-api/component.d.ts 1`] = `
"interface SubmitPayload {
    /**
     * email of user
     */
    email: string;
    /**
     * password of same user
     */
    password: string;
}
declare const _default: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {
        /**
         * Default number
         */
        numberDefault: {
            type: NumberConstructor;
            default: number;
        };
        /**
         * Default function Object
         */
        objectDefault: {
            type: ObjectConstructor;
            default: () => {
                foo: string;
            };
        };
        /**
         * Default function Array
         */
        arrayDefault: {
            type: ArrayConstructor;
            default: () => number[];
        };
        /**
         * Default function more complex
         */
        complexDefault: {
            type: ArrayConstructor;
            default: (props: any) => any[];
        };
    };
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: {
        submit: ({ email, password }: SubmitPayload) => boolean;
    };
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
export default _default;
"
`;

exports[`Input: reference-type-events/component.vue, Output: reference-type-events/component.vue.d.ts 1`] = `
"import type { MyEvents } from './my-events';
declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: MyEvents;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const _default: typeof __VLS_export;
export default _default;
"
`;

exports[`Input: reference-type-events/my-events.ts, Output: reference-type-events/my-events.d.ts 1`] = `
"/**
 * Emitted when the foo property is changed.
 */
type MyEventsFoo = 'foo';
export interface MyEvents {
    (event: MyEventsFoo, data?: {
        foo: string;
    }): void;
    (event: 'bar', value: {
        arg1: number;
        arg2?: any;
    }): void;
    (e: 'baz'): void;
}
export {};
"
`;

exports[`Input: reference-type-exposed/component.vue, Output: reference-type-exposed/component.vue.d.ts 1`] = `
"import { type VNode } from 'vue';
import type { MyExposed } from './my-exposed';
type __VLS_Props = {
    label: string;
};
type __VLS_Emit = {
    click: [event: Event];
};
type __VLS_Slots = {
    default: () => VNode[];
};
declare const __VLS_base: import("vue").DefineComponent2<{
    setup(): MyExposed;
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: __VLS_Props;
    __typeEmits: __VLS_Emit;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const __VLS_export: __VLS_WithSlots<typeof __VLS_base, __VLS_Slots>;
declare const _default: typeof __VLS_export;
export default _default;
type __VLS_WithSlots<T, S> = T & {
    new (): {
        $slots: S;
    };
};
"
`;

exports[`Input: reference-type-exposed/component-options-api.vue, Output: reference-type-exposed/component-options-api.vue.d.ts 1`] = `
"declare const _default: typeof __VLS_export;
export default _default;
declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {
        counter: number;
    };
    props: {};
    computed: {};
    methods: {
        /** Resets the counter to zero */
        reset(): void;
        /** Increments the counter by one */
        increment(): void;
    };
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: "reset" | "increment";
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
"
`;

exports[`Input: reference-type-exposed/my-exposed.ts, Output: reference-type-exposed/my-exposed.d.ts 1`] = `
"import type { Ref } from 'vue';
export interface MyExposed {
    /**
     * a counter string
     */
    counter: Ref<string>;
    /**
     * an oldCounter string
     * @deprecated use counter instead
     */
    oldCounter: Ref<string>;
}
"
`;

exports[`Input: reference-type-model/component.vue, Output: reference-type-model/component.vue.d.ts 1`] = `
"type __VLS_ModelProps = {
    /**
     * required number modelValue
     */
    modelValue: number;
    /**
     * optional boolean foo with default false
     */
    'foo'?: boolean;
    /**
     * optional string bar with lazy and trim modifiers
     */
    'bar'?: string;
    'barModifiers'?: Partial<Record<'lazy' | 'trim', true>>;
};
type __VLS_ModelEmit = {
    'update:modelValue': [value: number];
    'update:foo': [value: boolean];
    'update:bar': [value: string | undefined];
};
declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: __VLS_ModelProps;
    __typeEmits: __VLS_ModelEmit;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const _default: typeof __VLS_export;
export default _default;
"
`;

exports[`Input: reference-type-props/component.vue, Output: reference-type-props/component.vue.d.ts 1`] = `
"import { MyProps } from './my-props';
declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: MyProps;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: {
        bar: number;
        baz: () => string[];
    };
}>;
declare const _default: typeof __VLS_export;
export default _default;
"
`;

exports[`Input: reference-type-props/component-destructure.vue, Output: reference-type-props/component-destructure.vue.d.ts 1`] = `
"type __VLS_Props = {
    text: string;
};
declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: __VLS_Props;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const _default: typeof __VLS_export;
export default _default;
"
`;

exports[`Input: reference-type-props/component-js.vue, Output: reference-type-props/component-js.vue.d.ts 1`] = `
"declare const _default: typeof __VLS_export;
export default _default;
declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {
        foo: {
            type: StringConstructor;
            required: true;
        };
        bar: {
            type: StringConstructor;
            default: string;
        };
        baz: {
            type: StringConstructor;
        };
        xfoo: {
            readonly type: StringConstructor;
            readonly required: true;
        };
        xbar: {
            readonly type: StringConstructor;
            readonly default: "";
        };
        xbaz: {
            readonly type: StringConstructor;
        };
    };
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
"
`;

exports[`Input: reference-type-props/component-js-setup.vue, Output: reference-type-props/component-js-setup.vue.d.ts 1`] = `
"declare const __VLS_export: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {
        foo: {
            type: StringConstructor;
            required: true;
        };
        bar: {
            type: StringConstructor;
            default: string;
        };
        baz: {
            type: StringConstructor;
        };
        xfoo: {
            readonly type: StringConstructor;
            readonly required: true;
        };
        xbar: {
            readonly type: StringConstructor;
            readonly default: "";
        };
        xbaz: {
            readonly type: StringConstructor;
        };
        /**
         * The hello property.
         *
         * @since v1.0.0
         */
        hello: {
            type: StringConstructor;
            default: string;
        };
        numberOrStringProp: {
            type: (StringConstructor | NumberConstructor)[];
            default: number;
        };
        arrayProps: {
            type: ArrayConstructor;
            default: () => number[];
        };
    };
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const _default: typeof __VLS_export;
export default _default;
"
`;

exports[`Input: reference-type-props/my-props.ts, Output: reference-type-props/my-props.d.ts 1`] = `
"export interface MyNestedProps {
    /**
     * nested prop documentation
     */
    nestedProp: string;
}
export interface MyIgnoredNestedProps {
    nestedProp: string;
}
export interface MyNestedRecursiveProps {
    recursive: MyNestedRecursiveProps;
}
declare enum MyEnum {
    Small = 0,
    Medium = 1,
    Large = 2
}
declare namespace MyNamespace {
    type MyType = {};
}
declare const categories: readonly ["Uncategorized", "Content", "Interaction", "Display", "Forms", "Addons"];
type MyCategories = typeof categories[number];
export interface MyProps {
    /**
     * string foo
     *
     * @default "rounded"
     * @since v1.0.0
     * @see https://vuejs.org/
     * @example
     * \`\`\`vue
     * <template>
     *   <component foo="straight" />
     * </template>
     * \`\`\`
     */
    foo: string;
    /**
     * optional number bar
     */
    bar?: number;
    /**
     * string array baz
     */
    baz?: string[];
    /**
     * required union type
     */
    union: string | number;
    /**
     * optional union type
     */
    unionOptional?: string | number;
    /**
     * required nested object
     */
    nested: MyNestedProps;
    /**
     * required nested object with intersection
     */
    nestedIntersection: MyNestedProps & {
        /**
         * required additional property
         */
        additionalProp: string;
    };
    /**
     * optional nested object
     */
    nestedOptional?: MyNestedProps | MyIgnoredNestedProps;
    /**
     * required array object
     */
    array: MyNestedProps[];
    /**
     * optional array object
     */
    arrayOptional?: MyNestedProps[];
    /**
     * enum value
     */
    enumValue: MyEnum;
    /**
     * namespace type
     */
    namespaceType: MyNamespace.MyType;
    /**
     * literal type alias that require context
     */
    literalFromContext: MyCategories;
    inlined: {
        foo: string;
    };
    recursive: MyNestedRecursiveProps;
}
export declare const StringRequired: {
    readonly type: StringConstructor;
    readonly required: true;
};
export declare const StringEmpty: {
    readonly type: StringConstructor;
    readonly default: "";
};
export declare const StringUndefined: {
    readonly type: StringConstructor;
};
export {};
"
`;

exports[`Input: reference-type-slots/component.vue, Output: reference-type-slots/component.vue.d.ts 1`] = `
"declare var __VLS_1: {}, __VLS_3: {
    num: number;
}, __VLS_5: {
    str: string;
}, __VLS_7: {
    num: number;
    str: string;
};
type __VLS_Slots = {} & {
    'no-bind'?: (props: typeof __VLS_1) => any;
} & {
    default?: (props: typeof __VLS_3) => any;
} & {
    'named-slot'?: (props: typeof __VLS_5) => any;
} & {
    vbind?: (props: typeof __VLS_7) => any;
};
declare const __VLS_base: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const __VLS_export: __VLS_WithSlots<typeof __VLS_base, __VLS_Slots>;
declare const _default: typeof __VLS_export;
export default _default;
type __VLS_WithSlots<T, S> = T & {
    new (): {
        $slots: S;
    };
};
"
`;

exports[`Input: reference-type-slots/component-define-slots.vue, Output: reference-type-slots/component-define-slots.vue.d.ts 1`] = `
"import type { MySlots } from './my-slots';
type __VLS_Slots = MySlots;
declare const __VLS_base: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const __VLS_export: __VLS_WithSlots<typeof __VLS_base, __VLS_Slots>;
declare const _default: typeof __VLS_export;
export default _default;
type __VLS_WithSlots<T, S> = T & {
    new (): {
        $slots: S;
    };
};
"
`;

exports[`Input: reference-type-slots/component-no-script.vue, Output: reference-type-slots/component-no-script.vue.d.ts 1`] = `
"declare var __VLS_1: {}, __VLS_3: {
    num: number;
}, __VLS_5: {
    str: string;
}, __VLS_7: {
    num: number;
    str: string;
};
type __VLS_Slots = {} & {
    'no-bind'?: (props: typeof __VLS_1) => any;
} & {
    default?: (props: typeof __VLS_3) => any;
} & {
    'named-slot'?: (props: typeof __VLS_5) => any;
} & {
    vbind?: (props: typeof __VLS_7) => any;
};
declare const __VLS_base: import("vue").DefineComponent2<{
    setup(): {};
    data(): {};
    props: {};
    computed: {};
    methods: {};
    mixins: {}[];
    extends: {};
    emits: string[];
    slots: {};
    inject: {};
    components: {};
    directives: {};
    provide: {};
    expose: string;
    __typeProps: unknown;
    __typeEmits: unknown;
    __typeRefs: {};
    __typeEl: any;
    __defaults: unknown;
}>;
declare const __VLS_export: __VLS_WithSlots<typeof __VLS_base, __VLS_Slots>;
declare const _default: typeof __VLS_export;
export default _default;
type __VLS_WithSlots<T, S> = T & {
    new (): {
        $slots: S;
    };
};
"
`;

exports[`Input: reference-type-slots/my-slots.ts, Output: reference-type-slots/my-slots.d.ts 1`] = `
"import type { VNode } from 'vue';
export interface MySlots {
    /**
     * Default slot
     */
    default: (props: {
        num: number;
    }) => VNode[];
    'named-slot': (props: {
        str: string;
    }) => VNode[];
    /**
     * Slot with tags
     * @deprecated do not use
     */
    vbind: (props: {
        num: number;
        str: string;
    }) => VNode[];
    'no-bind': () => VNode[];
}
"
`;

exports[`Input: ts-component/PropDefinitions.ts, Output: ts-component/PropDefinitions.d.ts 1`] = `
"export interface MyProps {
    /**
     * string foo
     */
    foo: string;
    /**
     * optional number bar
     */
    bar?: number;
}
"
`;

exports[`Input: ts-component/component.ts, Output: ts-component/component.d.ts 1`] = `undefined`;

exports[`Input: ts-component/component.tsx, Output: ts-component/component.d.ts 1`] = `undefined`;

exports[`Input: ts-named-export/component.ts, Output: ts-named-export/component.d.ts 1`] = `
"export declare const Foo: import("vue").DefineSetupFnComponent<{
    foo: string;
}, string[], {}, {
    foo: string;
} & {
    [x: \`on\${Capitalize<string>}\`]: (...args: any[]) => any;
}, import("vue").PublicProps>;
export declare const Bar: import("vue").DefineSetupFnComponent<{
    bar?: number;
}, string[], {}, {
    bar?: number;
} & {
    [x: \`on\${Capitalize<string>}\`]: (...args: any[]) => any;
}, import("vue").PublicProps>;
"
`;
